Fixed conflict with tooltips and fixed scrollbar actions in history view

--- a/public/stylesheets/history.css
+++ b/public/stylesheets/history.css
@@ -1,4 +1,8 @@
 
+body {
+	overflow-y: hidden;
+}
+
 #historyContainer{
 	position: relative;
 	margin-left: auto;
@@ -34,7 +38,7 @@
 	padding-bottom: 50px;
 	height: 100%;
 	width: 100%;
-	overflow-y: scroll;
+	overflow-y: hidden;
 
 }
 
@@ -45,7 +49,8 @@
 
 #leftCol {
 	padding-left: 0px;
-	padding-right: 20px
+	padding-right: 20px;
+	height: 100%;
 }
 #rightCol {
 	padding-left: 20px;
@@ -233,6 +238,8 @@ input.filter {
 
 #rooms {
 	margin: 0;
+	max-height: calc(100% - 48px);
+	overflow-y: scroll;
 }
 
 .room {
@@ -263,4 +270,9 @@ input.filter {
 
 .room_detail span {
 	padding-left: 30px;
+}
+
+::-webkit-scrollbar-track{
+		margin-top: 5px;
+    	margin-bottom: 5px;
 }
